# HLISA

./: .gitignore  README.md  cursor.py  hl_action_chains.py  hl_actions.py  hl_util.py  setup.cfg  setup.py
docs/: api.md  changelog.md
hlisa/: additional_actions.py  hl_action_chains.py  hl_actions.py  hlisa_action_chains.py  selenium_actions.py
human_like_selenium_api/: hl_action_chains.py  hl_actions.py  hl_util.py
package/hlisa/: hlisa_action_chains.py  selenium_actions.py
src/HLISA/: additional_actions.py  constants.py  errors.py  hlisa_action_chains.py  selenium_actions.py  test_std_postive.py  util.py
test/: index.html  page2.html  server.js  test.py  tests.js  tests2.js
