[metadata]
name = HLISA
version = 1.2.0
author = David Roefs
author_email = david.roefs@ru.nl
license = GPLv3
description = A reimplementation of the Selenium API, emulating human interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/droefs/HLISA
project_urls =
    Bug Tracker = https://github.com/droefs/HLISA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
install_requires =
    selenium

[options.packages.find]
where = src

